--- a/_data/locales/en.yml
+++ b/_data/locales/en.yml
@@ -74,6 +74,28 @@ post:
   # pinned prompt of posts list on homepage
   pin_prompt: Pinned
 
+project:
+  written_by: By
+  posted: Posted
+  updated: Updated
+  words: words
+  pageview_measure: views
+  read_time:
+    unit: min
+    prompt: read
+  relate_posts: Further Reading
+  share: Share
+  button:
+    next: Newer
+    previous: Older
+    copy_code:
+      succeed: Copied!
+    share_link:
+      title: Copy link
+      succeed: Link copied successfully!
+  # pinned prompt of posts list on homepage
+  pin_prompt: Pinned
+
 # categories page
 categories:
   category_measure:
