--- a/_posts/2022-07-23-Welcome.markdown
+++ b/_posts/2022-07-23-Welcome.markdown
@@ -2,6 +2,7 @@
 title: Welcome
 date: 2022-07-23
 pin: true
+tags: [hacking]
 ---
 
 Hey, welcome to my site. I'm a Pokémon Rom Hacker and if you are too you may of seen me around. I go by Paccy on Pokecommunity and Discord but Artrios on GitHub. I only really hack Pokémon Emerald using the disassembly but I'm also working on dissassembled eReader Cards. And of course back in the day I did binary hacking.
