--- a/_data/locales/en.yml
+++ b/_data/locales/en.yml
@@ -15,7 +15,7 @@ tabs:
   categories: Projects
   tags: Tags
   archives: Archives
-  about: About
+  about: Wiki
 
 # the text displayed in the search bar & search results
 search:
